test/end-to-end/compile-errors/flags-signed.crow
main void()
	()

f flags int32 storage
	x = -1
